--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>FlickList</title>
+        <title>Main Blog Page</title>
         <style type="text/css">
             .error {
                 color: red;
@@ -10,7 +10,8 @@
     </head>
     <body>
         <h1>
-            <a href="/">FlickList</a>
+            <a href="/">Main Blog Page</a>
+            <a href="/newpost">Add a Blog Entry</a>
         </h1>
 
         {% block content %}
