--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,4 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<h2>Blogs</h2>
+<content>
+    {% for blog in Blogs %}
+    <p>{{blog}}</p>
+    {% endfor %}
+</content>
+
 {% endblock %}
