--- a/templates/blog.html
+++ b/templates/blog.html
@@ -3,9 +3,10 @@
 {% block content %}
 
 <h1>Build a Blog</h1>
-    {% for blog in blogs %}
+    {% for blog in all_blogs %}
     <a href="/individual-blog?id={{blog.id}}">{{blog.title}}</a>
     <p>{{blog.content}}</p> 
+    <P>Written by: <a href="/blog?user={{blog.owner_id}}">{{blog.owner.username}}</a></P>
     <br>
     {% endfor %}
 
